--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -85,6 +85,28 @@ nav ul li a:hover{
     background-color: brown;
 }
 
+#slider{
+    position: relative;
+    height: 500px;
+    width: 1000px;    
+    padding: 0;
+    background-image: url("../images/edificio_1.png");
+}
+
+#zocalo{
+    position: absolute; 
+    background-color: rgba(255, 255, 255, 0.6); 
+    width: 500px; 
+    height: 80px; 
+    right: 0px;
+    top: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    box-sizing: border-box;
+    padding-left: 20px;
+    line-height: 1.6;    
+}
+
 footer{
     height: 100px;
     background-color: dimgray;
@@ -182,7 +204,7 @@ section h2 {
     margin-top: 50px;
     width: 1000px;
     height: 300px;
-    background-image: url("../images/paisaje.png");
+    background-image: url("../images/edificio_2.png");
     /* efectos parallax */
     background-attachment: fixed;
     background-position: center;
