--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -20,6 +20,7 @@ header{
 
 h1{    
     margin-top: 0;
+    font-family: "roboto";
 }
 
 #cajaLogo{
@@ -108,17 +109,21 @@ nav ul li a:hover{
 }
 
 footer{
-    height: 100px;
-    background-color: dimgray;
+    height: 150px;
+    background-color: dimgray;    
 }
 
 footer .holder{
     
+    height: 100%;
     color: white;
     text-align: center;
     font-family: 'roboto';
     font-size: 12px;
-    padding-top: 35px;
+    box-sizing: border-box;
+    padding-top: 1.5em;
+    line-height: 1.5em;
+    background-image: url("../images/pie.png");
 }
 
 .cajaGraduados, .cajaGraduados2{
@@ -139,6 +144,8 @@ footer .holder{
     padding: 10px;
     font-size: 18px;
     text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
 }
 
 .cajaGraduados2:nth-child(odd) .testimonioGraduado {
@@ -284,6 +291,8 @@ tbody tr td:nth-child(2){
     padding-bottom: 5px;
     border-left: solid 1px rgb(218, 165, 32);
     border-right: solid 1px rgb(218, 165, 32);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
 .tituloCarrera{
@@ -421,9 +430,16 @@ form input[type="submit"] {
     /* background-color: green; */
 }
 
-#cajaHistoria{
+#cajaHistoria, #infoContacto{
     margin-left: 10px;
     margin-right: 10px;
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
+    /* font-size: 14px; */
+}
+
+#mapa iframe{
+    border-width: 0px 0px 1px 0px;
+    border-style: solid;
+    border-color: black;
 }
